--- a/src/main/webapp/editGoods.html
+++ b/src/main/webapp/editGoods.html
@@ -62,8 +62,6 @@
 		             }
 		         });
 			}
-		}
-		
 	});
 	function editGoodsDetail(){
 		document.getElementById('goodsDetail').style.display="block";
@@ -185,17 +183,18 @@
 </head>
 <body>
  <div class="panel admin-panel">
- 	<header class="panel-head" ><strong>商品详情</strong></header> 
- 	<table>
- 		<tr><td>
- 			<div class="title">
-	    	<ul>
-		    	<li style="float:left;padding:0.2em;"><a href="./index.html">返回首页</a></li>
-		    	<li style="float:left;padding:0.2em;"><a href="javascript:returnLastPage()">返回上一级</a></li>
-	    	</ul>
-	    </div>
- 		</td></tr>
- 	</table>
+ 	<table id="title" style="background-color:#20B2AA">
+  		<tr><td>
+  			<div class="title">
+		    	<ul >
+			    	<li style="float:left;padding:0.2em;"><a href="javascript:returnLastPage()"  style="color:#FFFFFF;font-size:25px;">返回</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="#" style="color:#FFFFFF;font-size:25px;">商品详情</a></li>
+		    		<li style="float:left;padding:0.2em;"><a href="./index.html"  style="color:#FFFFFF;font-size:25px;">首页</a></li>
+		    	</ul>
+		    </div>
+  		</td></tr>
+  		<tr style="visibility: hidden;"><td colspan="3">111111111111111111111111111111111111111111111111111111111111</td></tr>
+  	</table> 
    <table class="table table-hover text-center">
      <tr>
        <td rowspan="5"><img id="img" src="./images/vegetable3.jpg"/></td>
