--- a/src/main/webapp/editPassword.html
+++ b/src/main/webapp/editPassword.html
@@ -5,7 +5,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <meta name="renderer" content="webkit">
-<title></title>
 <link rel="stylesheet" href="css/pintuer.css">
 <link rel="stylesheet" href="css/admin.css">
 <link rel="stylesheet" href="orderSubmit.css">
@@ -91,27 +90,19 @@
 <body>
 <form method="post" action="" id="listform">
   <div class="panel admin-panel">
-  	<div class=""><a></a></div>
-    <div class="panel-head"><strong>修改密码 </strong></div>
+    <table id="title" style="background-color:#20B2AA">
+ 		<tr><td>
+ 			<div class="title">
+		    	<ul >
+			    	<li style="float:left;padding:0.2em;"><a href="javascript:returnLastPage()"  style="color:#FFFFFF;font-size:25px;">返回</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="#" style="color:#FFFFFF;font-size:25px;">修改密码</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="./index.html" style="color:#FFFFFF;font-size:25px;">首页</a></li>
+		    	</ul>
+		    </div>
+ 		</td></tr>
+ 		<tr style="visibility: hidden;"><td colspan="3">111111111111111111111111111111111111111111111111111111111111</td></tr>
+  	</table>
     <table class="table table-hover text-center">
-      <tr>
-        <th></th>
-        <th></th>
-      </tr>
-      	<tr>
-          <td>
-          	<ul id="ulid">
-          		<li style="float:left; list-style:none">
-          			<a href="./index.html">返回首页</a>
-          		</li>
-          		<li style="float:center; list-style:none">
-          			<a href="javascript:returnLastPage()">返回上一级</a>
-          		</li>
-          	</ul>
-          	
-          	 </td>
-          <td></td>
-        </tr>
         <tr>
         	<td>用户名：</td>
         	<td><input type="text" id="phone" disabled="true"></input></td>
