--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -52,11 +52,14 @@
         if(user1.user_type==1){
     		document.getElementById('user').style.display="block";
     		document.getElementById('userRecommend').style.display="block";
+    		document.getElementById('userFoot').style.display="block";
     		
     	}else{
     	    document.getElementById('supplier').style.display="block";
     	    document.getElementById('modifyPrice').style.display="block";
     	    document.getElementById('supplierRecommend').style.display="block";
+    		document.getElementById('supplierFoot').style.display="block";
+
     	}
     });
     function joinMyBasket(obj){//加入菜篮   取消本地cookie存储
@@ -98,45 +101,22 @@
     }
 </script>
 </head>
-<body>
+<body >
 	<div id="user" style="display:none;">
-		<div class="container"></div>
-		<table>
-			<tr><td><b>农业精准扶贫客户端</b></td></tr>
-			<tr>
-				<td>
-				<div class="title">
-			    	<ul>
-				    	<li style="float:left;padding:0.2em;"><a href="./goodsList.html">去买菜</a></li>
-				    	<li style="float:left;padding:0.2em;"><a href="./myBasket.html">我的菜篮</a></li>
-				    	<li style="float:left;padding:0.2em;"><a href="javascript:void(0);" onclick="openOrderList(1)">我的订单</a></li>
-				    	<li style="float:left;padding:0.2em;"><a href="./userBill.html">结算中心</a></li>
-				    	<li style="float:left;padding:0.2em;"><a href="./user.html">个人中心</a></li>
-			    	</ul>
-			    </div>
-			</td></tr>
-		  </table>  	
+		<table border=0>
+			<tr><td style="text-align: center;background-color:#20B2AA"><h2 style="color:#FFFFFF;">生鲜系统客户端</h2></td></tr>
+			<tr style="background-color:#20B2AA"><td style="color:#20B2AA;">11111111111111111111111111111111111111111111111</td></tr>
+		</table>  
   	</div>
   	<div id="supplier" style="display:none;">
-	<div class="container"></div>
-	  
-	  	<table>
-	  		<tr><td><b>农业精准扶贫供应商端</b></td></tr>
-	  		<tr><td>
-	  			<div class="title">
-			    	<ul>
-				    	<li style="float:left;padding:0.2em;"><a href="./pendingQuateOrder.html">待报价</a></li>
-				    	<li style="float:left;padding:0.2em;"><a href="javascript:void(0);" onclick="openOrderList(2)">订单处理</a></li>
-				    	<li style="float:left;padding:0.2em;"><a href="./clientBill.html">账单中心</a></li>
-				    	<li style="float:left;padding:0.2em;"><a href="./vegetableCenter.html">菜品中心</a></li>
-			    	</ul>
-			    </div>
-	  		</td></tr>
-	  	</table>
+	  	<table border=0>
+			<tr><td style="text-align: center;background-color:#20B2AA"><h2 style="color:#FFFFFF;">生鲜系统供应商端</h2></td></tr>
+			<tr style="background-color:#20B2AA;"><td style="color:#20B2AA;">11111111111111111111111111111111111111111111111</td></tr>
+		</table> 
   	
   </div>
   <div class="panel admin-panel">
-  		<div class="panel-head"><strong> 市场行情</strong> <a href="#" style="float:right;display:none;" id="modifyPrice">修改行情价格</a></div>
+  		<div class="panel-head"><h2> 市场行情</h2> <a href="#" style="float:right;display:none;" id="modifyPrice">修改行情价格</a></div>
     <table class="table table-hover text-center" id="market">
       <tr>
         <th style="text-align:center; padding:20px; display:none">ID</th>
@@ -148,7 +128,7 @@
     </table>
   </div>
    <div class="panel admin-panel" id="supplierRecommend" style="display:none">
-  		<div class="panel-head"><strong>推荐菜品</strong> <a href="editRecommendDishes.html" style="float:right;" id="modifyRecommend">修改推荐菜品</a></div>
+  		<div class="panel-head"><h2>推荐菜品</h2> <a href="editRecommendDishes.html" style="float:right;" id="modifyRecommend">修改推荐菜品</a></div>
   		<table class="table table-hover text-center" id="recommendDishes1">
 	      <tr>
 	        <td>蔬菜名称</td>
@@ -158,7 +138,7 @@
        </table> 
   </div>
   <div class="panel admin-panel" id="userRecommend" style="display:none">
-  		<div class="panel-head"><strong>今日推荐</strong>
+  		<div class="panel-head"><h2>今日推荐</h2>
   		<table class="table table-hover text-center" id="recommendDishes2">
 	      <tr>
 	        <td>蔬菜名称</td>
@@ -167,6 +147,33 @@
 	      </tr>
 	      </table>
 	     </div> 
+  </div>
+  <div class="foot" id="userFoot" style="display:none;">
+  		<table>
+			<tr><td style="text-align: center;background-color:#20B2AA">
+				<ul>
+			    	<li style="float:left;padding:0.2em;"><a href="./goodsList.html" style="color:#FFFFFF;font-size:15px;">去买菜</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="./myBasket.html" style="color:#FFFFFF;font-size:15px;">我的菜篮</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="javascript:void(0);" onclick="openOrderList(1)" style="color:#FFFFFF;font-size:15px;">我的订单</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="./userBill.html" style="color:#FFFFFF;font-size:15px;">结算中心</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="./user.html" style="color:#FFFFFF;font-size:15px;">个人中心</a></li>
+			    </ul>
+			  </td></tr>
+			<tr style="visibility: hidden;"><td>11111111111111111111111111111111111111111111111</td></tr>
+		</table>  
+  </div>
+  <div class="foot" id="supplierFoot" style="display:none;">
+  		<table>
+			<tr><td style="text-align: center;background-color:#20B2AA">
+				<ul>
+			    	<li style="float:left;padding:0.2em;"><a href="./pendingQuateOrder.html" style="color:#FFFFFF;font-size:20px;">待报价</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="javascript:void(0);" onclick="openOrderList(2)" style="color:#FFFFFF;font-size:20px;">订单处理</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="./clientBill.html" style="color:#FFFFFF;font-size:20px;">账单中心</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="./vegetableCenter.html" style="color:#FFFFFF;font-size:20px;">菜品中心</a></li>
+		    	</ul>
+			  </td></tr>
+			<tr style="visibility: hidden;"><td>11111111111111111111111111111111111111111111111</td></tr>
+		</table>  
   </div>
 </body>
 <script>
