--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-<meta name="renderer" content="webkit"> -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+<meta name="renderer" content="webkit"> 
 <title></title>
 <link rel="stylesheet" href="css/pintuer.css">
 <link rel="stylesheet" href="css/admin.css">
@@ -77,28 +77,27 @@ var user = JSON.parse(obj);
 <body>
 <form method="post" action="" id="listform">
   <div class="panel admin-panel">
-  	<header class="panel-head" ><strong> 用户中心</strong></header> 
-  	<table>
+  	<table id="title" style="background-color:#20B2AA">
   		<tr><td>
   			<div class="title">
-		    	<ul>
-			    	<li style="float:left;padding:0.2em;"><a href="./index.html">返回首页</a></li>
-			    	<li style="float:left;padding:0.2em;"><a href="./myBasket.html">我的菜篮</a></li>
+		    	<ul >
+			    	<li style="float:left;padding:0.2em;"><a href="./index.html"  style="color:#FFFFFF;font-size:25px;">返回</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="#" style="color:#FFFFFF;font-size:25px;">用户中心</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="./myBasket.html" style="color:#FFFFFF;font-size:25px;">我的菜篮</a></li>
 		    	</ul>
 		    </div>
+  		</td>
+  		<tr style="visibility: hidden;"><td colspan="3">111111111111111111111111111111111111111111111111111111111111</td></tr>
+  		<tr><td colspan="3">
+	    	<ul >
+	    		<li style="float:left;padding:0.05em;"><select onchange="openUserInfo(this)"><option value="0">个人资料</option><option value="1" onclick="">查看个人资料</option><option value="2">修改个人资料</option></select></li>
+	    		<li style="float:left;padding:0.05em;"><select onchange="openAccount(this)"><option value="0">账户中心</option><option value="1">修改密码</option><option value="2">找回密码</option></select></li>
+	    		<li style="float:left;padding:0.05em;"><select onchange="openAddress(this)"><option value="0">我的收获地址</option><option value="1">查看收货地址</option><option value="2">修改收货地址</option></select></li>
+	    		<li style="float:left;padding:0.05em;"><select onchange="openOrder(this)"><option value="0">我的订单</option><option value="1">待报价订单</option><option value="2">待收货订单</option><option value="3">已完成订单</option><option value="4">售后处理订单</option></select></li>
+	    	</ul>
   		</td></tr>
-  	</table>
-    	<ul >
-    		<li style="float:left;padding:0.2em;"><select onchange="openUserInfo(this)"><option value="0">个人资料</option><option value="1" onclick="">查看个人资料</option><option value="2">修改个人资料</option></select></li>
-    		<li style="float:left;padding:0.2em;"><select onchange="openAccount(this)"><option value="0">账户中心</option><option value="1">修改密码</option><option value="2">找回密码</option></select></li>
-    		<li style="float:left;padding:0.2em;"><select onchange="openAddress(this)"><option value="0">我的收获地址</option><option value="1">查看收货地址</option><option value="2">修改收货地址</option></select></li>
-    		<li style="float:left;padding:0.2em;"><select onchange="openOrder(this)"><option value="0">我的订单</option><option value="1">待报价订单</option><option value="2">待收货订单</option><option value="3">已完成订单</option><option value="4">售后处理订单</option></select></li>
-    	</ul>
-    
-    <div id="userInfo">
-		
-    </div>
-    
+  	</table> 
+  	
   </div>
  </form>
 <script type="text/javascript">
