--- a/src/main/webapp/userBill.html
+++ b/src/main/webapp/userBill.html
@@ -76,22 +76,26 @@ if(!payStatus){
 <body>
 <form method="post" action="" id="listform">
   <div class="panel admin-panel">
-  	<header class="panel-head" ><strong>账单</strong></header> 
-  	<table>
+  	<table id="title" style="background-color:#20B2AA">
   		<tr><td>
   			<div class="title">
-		    	<ul>
-			    	<li style="float:left;padding:0.2em;"><a href="./index.html">返回首页</a></li>
-			    	<li style="float:left;padding:0.2em;"><a href="./myBasket.html">我的菜篮</a></li>
+		    	<ul >
+			    	<li style="float:left;padding:0.2em;"><a href="./index.html"  style="color:#FFFFFF;font-size:25px;">返回</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="#" style="color:#FFFFFF;font-size:25px;">账单</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="./myBasket.html" style="color:#FFFFFF;font-size:25px;">我的菜篮</a></li>
 		    	</ul>
 		    </div>
-  		</td></tr>
-  	</table>
-    	<ul id="billTitle">
-    		<li style="float:left;padding:0.2em;"><a href="javascript:getOrder(1)">本月账单</a></li>
-	   		<li style="float:left;padding:0.2em;"><a href="javascript:getOrder(2)">上月待支付账单</a></li>
-	   		<li style="float:left;padding:0.2em;"><a href="javascript:getOrder(3)">历史账单</a></li>
+  		</td>
+  		<tr style="visibility: hidden;"><td colspan="3">111111111111111111111111111111111111111111111111111111111111</td></tr>
+  		<tr><td colspan="3">
+  			<ul id="billTitle">
+    		<li style="float:left;padding:0.2em;"><a href="javascript:getOrder(1)" style="color:#FFFFFF;font-size:20px;">本月账单</a></li>
+	   		<li style="float:left;padding:0.2em;"><a href="javascript:getOrder(2)" style="color:#FFFFFF;font-size:20px;">上月待支付账单</a></li>
+	   		<li style="float:left;padding:0.2em;"><a href="javascript:getOrder(3)" style="color:#FFFFFF;font-size:20px;">历史账单</a></li>
     	</ul>
+  		</td></tr>
+  	</table> 
+    	
     <table class="table table-hover text-center" id="myBillList">
       <tr>
         <th style="text-align:center; padding:0.5em 2em;">订单号</th>
