--- a/src/main/webapp/userOrderDetail.html
+++ b/src/main/webapp/userOrderDetail.html
@@ -438,24 +438,24 @@
 <body>
 <form method="post" action="" id="listform">
   <div class="panel admin-panel">
-  	<div class=""><a></a></div>
-    <div class="panel-head"><strong> 订单详情</strong></div>
-    <table>
+	<table id="title" style="background-color:#20B2AA">
   		<tr><td>
   			<div class="title">
-		    	<ul>
-			    	<li style="float:left;padding:0.2em;"><a href="./index.html">返回首页</a></li>
-			    	<li style="float:left;padding:0.2em;"><a href="javascript:returnLastPage()">返回上一级</a></li>
-			    	<li style="float:left;padding:0.2em;"><a href="./myBasket.html">我的菜篮</a></li>
+		    	<ul >
+			    	<li style="float:left;padding:0.2em;"><a href="javascript:returnLastPage()" style="color:#FFFFFF;font-size:25px;">返回</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="./index.html"  style="color:#FFFFFF;font-size:25px;">首页</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="#" style="color:#FFFFFF;font-size:25px;">订单详情</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="./myBasket.html" style="color:#FFFFFF;font-size:25px;">我的菜篮</a></li>
 		    	</ul>
 		    </div>
-  		</td></tr>
+  		</td>
+  		<tr style="visibility: hidden;"><td>111111111111111111111111111111111111111111111111111111111111</td></tr>
   		<tr>
   			<td>
 	  			<div>
 			    	<ul>
-				    	<li style="float:left;padding:0.2em;"><a href="javascript:showMsg(1)">商品信息</a></li>
-				    	<li style="float:left;padding:0.2em;"><a href="javascript:showMsg(2)">订单状态流转信息</a></li>
+				    	<li style="float:left;padding:0.2em;"><a href="javascript:showMsg(1)" style="color:#FFFFFF;font-size:25px;">商品信息</a></li>
+				    	<li style="float:left;padding:0.2em;"><a href="javascript:showMsg(2)" style="color:#FFFFFF;font-size:25px;">订单状态流转信息</a></li>
 			    	</ul>
 			    </div>
   			</td>
@@ -464,7 +464,7 @@
   </div>
 </form>
   <p/><p/>
-  <div id="goodsDetail"><b>订单商品信息:</b>
+  <div id="goodsDetail"><h2>订单商品信息:</h2>
     <table class="table table-hover text-center" id="order">
       <tr>
       	<th style='display:none;'></th>
@@ -528,7 +528,7 @@
 </div>
 <p/><p/>
 <div id="orderLog">
-	<div><b>订单状态流转信息:</b></div>
+	<div><h2>订单状态流转信息:</h2></div>
 	<table class="table table-hover text-center" id="log">
       <tr>
       	<th>事件</th>
