--- a/src/main/webapp/clientOrderDetail.html
+++ b/src/main/webapp/clientOrderDetail.html
@@ -173,9 +173,8 @@
   		<tr><td>
   			<div class="title">
 		    	<ul>
-			    	<li style="float:left;padding:0.2em;"><a href="./index.html">返回首页</a></li>
-			    	<li style="float:left;padding:0.2em;"><a href="javascript:returnLastPage()">返回上一级</a></li>
-			    	<li style="float:left;padding:0.2em;"><a href="./myBasket.html">我的菜篮</a></li>
+		    		<li style="float:left;padding:0.2em;"><a href="javascript:returnLastPage()">返回</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="./index.html">首页</a></li>			    	
 		    	</ul>
 		    </div>
   		</td></tr>
