--- a/src/main/webapp/editAddress.html
+++ b/src/main/webapp/editAddress.html
@@ -23,30 +23,27 @@
 			var message={
 					 "id":parseInt(addressId)//地址
 				};
-					$.ajax({//根据地址id查询收货地址详情
-			            url: "/fresh/address/findAddressById.action",        //后台url
-			            data: JSON.stringify(message),
-			            type: "POST",                   //类型，POST或者GET
-			            dataType: 'json',              //数据返回类型，可以是xml、json等
-			            contentType:'application/json;charset=UTF-8',
-			            success: function (data) {      //成功，回调函数
-			                //alert(data.result);
-			            	//var data={"address":{"address_detail":"dsadad","create_time":"sadada","id":1,"receiver":"dsa","receiver_phone":"","status":1,"user_id":2}};
-			            	data = data.address;
-			            	if(data){
-			            		$('#address').val(data.address_detail);
-				                $('#phone').val(data.receiver_phone);
-				                $('#receiver').val(data.receiver);
-			            	}
-			            },
-			            error: function (er) {          //失败，回调函数
-			                alert("查询失败");
-			            }
-			        });
-				}
+			$.ajax({//根据地址id查询收货地址详情
+	            url: "/fresh/address/findAddressById.action",        //后台url
+	            data: JSON.stringify(message),
+	            type: "POST",                   //类型，POST或者GET
+	            dataType: 'json',              //数据返回类型，可以是xml、json等
+	            contentType:'application/json;charset=UTF-8',
+	            success: function (data) {      //成功，回调函数
+	                //alert(data.result);
+	            	//var data={"address":{"address_detail":"dsadad","create_time":"sadada","id":1,"receiver":"dsa","receiver_phone":"","status":1,"user_id":2}};
+	            	data = data.address;
+	            	if(data){
+	            		$('#address').val(data.address_detail);
+		                $('#phone').val(data.receiver_phone);
+		                $('#receiver').val(data.receiver);
+	            	}
+	            },
+	            error: function (er) {          //失败，回调函数
+	                alert("查询失败");
+	            }
+	        });
 		}
-		
-		
 	});
 	function returnLastPage(){//返回上一页
 		window.history.go(-1); 
@@ -122,27 +119,19 @@
 <body>
 <form method="post" action="" id="listform">
   <div class="panel admin-panel">
-  	<div class=""><a></a></div>
-    <div class="panel-head"><strong>我的收获地址 </strong></div>
+  	<table id="title" style="background-color:#20B2AA">
+ 		<tr><td>
+ 			<div class="title">
+		    	<ul >
+			    	<li style="float:left;padding:0.2em;"><a href="javascript:returnLastPage()"  style="color:#FFFFFF;font-size:25px;">返回</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="#" style="color:#FFFFFF;font-size:25px;">编辑收货地址</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="./index.html" style="color:#FFFFFF;font-size:25px;">首页</a></li>
+		    	</ul>
+		    </div>
+ 		</td></tr>
+ 		<tr style="visibility: hidden;"><td colspan="3">111111111111111111111111111111111111111111111111111111111111</td></tr>
+  	</table>
     <table class="table table-hover text-center">
-      <tr>
-        <th></th>
-        <th></th>
-      </tr>
-      	<tr>
-          <td>
-          	<ul id="ulid">
-          		<li style="float:left; list-style:none">
-          			<a href="./index.html">返回首页</a>
-          		</li>
-          		<li style="float:center; list-style:none">
-          			<a href="javascript:returnLastPage()">返回上一级</a>
-          		</li>
-          	</ul>
-          	
-          	 </td>
-          <td></td>
-        </tr>
         <tr>
         	<td>地址：</td>
         	<td><input type="text" id="address"></input></td>
