--- a/src/main/webapp/editGoodsType.html
+++ b/src/main/webapp/editGoodsType.html
@@ -144,18 +144,18 @@ var message;//请求参数
 <body>
 <form method="post" action="" id="listform">
   <div class="panel admin-panel">
-  	<header class="panel-head" ><strong> 菜品中心</strong></header> 
-  	<table id="title">
+  	<table id="title" style="background-color:#20B2AA">
   		<tr><td>
   			<div class="title">
 		    	<ul >
-			    	<li style="float:left;padding:0.2em;"><a href="./index.html">返回首页</a></li>
-			    	<li style="float:left;padding:0.2em;"><a href="javascript:returnLastPage()">返回上一级</a></li>
-			    	
+			    	<li style="float:left;padding:0.2em;"><a href="javascript:returnLastPage()"  style="color:#FFFFFF;font-size:25px;">返回</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="#" style="color:#FFFFFF;font-size:25px;">编辑菜品种类</a></li>
+		    		<li style="float:left;padding:0.2em;"><a href="./index.html"  style="color:#FFFFFF;font-size:25px;">首页</a></li>
 		    	</ul>
 		    </div>
   		</td>
-  	</table>
+  		<tr style="visibility: hidden;"><td colspan="3">111111111111111111111111111111111111111111111111111111111111</td></tr>
+  	</table> 
   	<div><strong>现有的菜品种类详情如下:</strong></div>
     <table class="table table-hover text-center" id="goods">
       <tr>
@@ -164,12 +164,6 @@ var message;//请求参数
         <th>添加日期</th>
         <th>操作</th>
       </tr>
-      <!-- <tr>
-      	<td>类1</td>
-      	<td>叶菜类</td>
-      	<td>2017-5-8</td>
-      	<td><input type="button" onclick="deleteGoodsType('类1')" value="删除"/><input type="button" onclick="editGoodsType('lei1')" value="修改"/></td>
-      </tr> -->
     </table>
     <div>添加菜品种类：<input type="text"  id="goodsTypeName"/> <input type="button" onclick="addGoodsType()" value="确定"/></div>
   </div>
