--- a/src/main/webapp/editUserInfo.html
+++ b/src/main/webapp/editUserInfo.html
@@ -69,17 +69,18 @@ var user = JSON.parse(obj);
 </head>
 <body>
   <div class="panel admin-panel">
-	  <header class="panel-head" ><strong> 修改个人资料</strong></header> 
-	  	<table>
-	  		<tr><td>
-	  			<div class="title">
-			    	<ul>
-				    	<li style="float:left;padding:0.2em;"><a href="./index.html">返回首页</a></li>
-				    	<li style="float:left;padding:0.2em;"><a href="javascript:returnLastPage()">返回上一级</a></li>
-			    	</ul>
-			    </div>
-	  		</td></tr>
-	  	</table>
+	<table id="title" style="background-color:#20B2AA">
+ 		<tr><td>
+ 			<div class="title">
+		    	<ul >
+			    	<li style="float:left;padding:0.2em;"><a href="javascript:returnLastPage()"  style="color:#FFFFFF;font-size:25px;">返回</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="#" style="color:#FFFFFF;font-size:25px;">编辑个人资料</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="./index.html" style="color:#FFFFFF;font-size:25px;">首页</a></li>
+		    	</ul>
+		    </div>
+ 		</td></tr>
+ 		<tr style="visibility: hidden;"><td colspan="3">111111111111111111111111111111111111111111111111111111111111</td></tr>
+  	</table>
     <div id="editUserInfo">
 	    <table class="table table-hover text-center"  >
 	      <tr>
