--- a/src/main/webapp/goodsList.html
+++ b/src/main/webapp/goodsList.html
@@ -21,7 +21,7 @@
 	var pages=0;//当前页数
 	var goodsType=sessionStorage.getItem("goodsType");
 	if(!goodsType){
-		goodsType=100;
+		goodsType='all';
 	}
 	$(document).ready(function(c) {
      	var data={
@@ -39,7 +39,7 @@
                  //	 $("#title").append("<ul id='goodsType'></ul>");
                  	 if(data){
                  		for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
-                            $("#goodsType").append("<li style='float:left;padding:0.2em;'><a href='javascript:void(0)' onclick=\"getGoodsByType('"+data[i].id+"')\">"+data[i].goods_type_name+"</a></li>");
+                            $("#goodsType").append("<li style='float:left;padding:0.2em;'><a href='javascript:void(0)' onclick=\"getGoodsByType('"+data[i].id+"')\" style='font-size:20px'>"+data[i].goods_type_name+"</a></li>");
                         }
   	                	findMoreGoods();//查询所有种类商品
                  	 }
@@ -59,7 +59,7 @@
 		var data;//请求参数
 		pages+=1;
 		
-		if(goodsType==100){
+		if(goodsType=='all'){
 			data={
 	     			"currentPage":pages
 	    		};
@@ -149,19 +149,20 @@
 <div>
 	<form method="post" id="listform">
 	  <div class="panel admin-panel">
-	  	<header class="panel-head" ><strong> 商品列表-全部</strong></header> 
-	  	<table id="title">
+	  	<table id="title" style="background-color:#20B2AA">
 	  		<tr><td>
 	  			<div class="title">
 			    	<ul >
-				    	<li style="float:left;padding:0.2em;"><a href="./index.html">返回首页</a></li>
-				    	<li style="float:left;padding:0.2em;"><a href="./myBasket.html">我的菜篮</a></li>
+				    	<li style="float:left;padding:0.2em;"><a href="./index.html"  style="color:#FFFFFF;font-size:25px;">返回</a></li>
+				    	<li style="float:left;padding:0.2em;"><a href="#" style="color:#FFFFFF;font-size:25px;">商品列表</a></li>
+				    	<li style="float:left;padding:0.2em;"><a href="./myBasket.html" style="color:#FFFFFF;font-size:25px;">我的菜篮</a></li>
 			    	</ul>
 			    </div>
 	  		</td>
+	  		<tr style="visibility: hidden;"><td>111111111111111111111111111111111111111111111111111111111111</td></tr>
 	  	</table>
 	   	<ul id="goodsType">
-	   		<li style="float:left;padding:0.2em;"><a onclick="javascript:getGoodsByType('100')">全部</a></li>
+	   		<li style="float:left;padding:0.2em;"><a onclick="javascript:getGoodsByType('all')" style="font-size:20px">全部</a></li>
 	   	</ul>
 	    <table class="table table-hover text-center" id="goods">
 	    </table>
