--- a/src/main/webapp/myBasket.html
+++ b/src/main/webapp/myBasket.html
@@ -125,18 +125,20 @@
 <body>
 <form method="post" action="" id="listform">
    <div class="panel admin-panel">
-  	<header class="panel-head" ><strong> 我的菜篮</strong></header> 
-  	<table>
+  	<table style="background-color:#20B2AA">
   		<tr><td>
   			<div class="title">
 		    	<ul>
-			    	<li style="float:left;padding:0.2em;"><a href="./index.html">返回首页</a></li>
-			    	<li style="float:left;padding:0.2em;"><a href="javascript:returnLastPage()">返回上一级</a></li>
+		    		<li style="float:left;padding:0.2em;"><a href="javascript:returnLastPage()" style="color:#FFFFFF;font-size:25px;">返回</a></li>	
+			    	<li style="float:left;padding:0.2em;"><a href="#" style="color:#FFFFFF;font-size:25px;">我的菜篮</a></li>			    	
+		    		<li style="float:left;padding:0.2em;"><a href="./index.html" style="color:#FFFFFF;font-size:25px;">首页</a></li>
 		    	</ul>
 		    </div>
   		</td></tr>
+  		<tr style="visibility: hidden;"><td>111111111111111111111111111111111111111111111111111111111111</td></tr>
+  		
   	</table>
-    <div class="panel-head"><strong> 您购买了如下产品：</strong></div>
+    <div class="panel-head"><h2>您购买了如下产品：</h2> </div>
     <table class="table table-hover text-center" id="myBasket">
       <tr>
         <th style="text-align:center; padding:20px; display:none;">ID</th>
