--- a/src/main/webapp/pendingQuateOrder.html
+++ b/src/main/webapp/pendingQuateOrder.html
@@ -54,19 +54,18 @@ function findMoreOrderByStatus(){
 <body>
 <form method="post" action="" id="listform">
   <div class="panel admin-panel">
-  	<header class="panel-head" ><strong>报价订单列表</strong></header> 
-  	<table>
+  	<table id="title" style="background-color:#20B2AA">
   		<tr><td>
   			<div class="title">
-		    	<ul>
-			    	<li style="float:left;padding:0.2em;"><a href="./index.html">返回首页</a></li>
-			    	<!-- <li style="float:left;padding:0.2em;"><a href="javascript:returnLastPage()">返回上一级</a></li>
-			    	<li style="float:left;padding:0.2em;"><a href="./myBasket.html">我的菜篮</a></li> -->
+		    	<ul >
+			    	<li style="float:left;padding:0.2em;"><a href="./index.html"  style="color:#FFFFFF;font-size:25px;">返回</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="#" style="color:#FFFFFF;font-size:25px;">报价订单列表</a></li>
 		    	</ul>
 		    </div>
   		</td></tr>
+  		<tr style="visibility: hidden;"><td>111111111111111111111111111111111111111111111111111111111111</td></tr>
   	</table>
-    <div><strong>待报价的订单如下：</strong></div>
+    <div><h2>待报价的订单如下：</h2></div>
     <table class="table table-hover text-center" id="order">
       <tr>
         <th style="text-align:center; padding:0.5em 2em;">订单号</th>
