add success Special effect

--- a/src/main/webapp/editRecommendDishes.html
+++ b/src/main/webapp/editRecommendDishes.html
@@ -122,16 +122,17 @@ var message;//请求参数
 <body>
 <form method="post" action="" id="listform">
   <div class="panel admin-panel">
-    <header class="panel-head"><strong>修改推荐产品</strong></header>
-    <table id="title">
+  	<table id="title" style="background-color:#20B2AA">
   		<tr><td>
   			<div class="title">
 		    	<ul >
-			    	<li style="float:left;padding:0.2em;"><a href="./index.html">返回首页</a></li>
+		    		<li style="float:left;padding:0.2em;"><a href="./index.html"  style="color:#FFFFFF;font-size:25px;">返回</a></li>
+			    	<li style="float:left;padding:0.2em;"><a href="#" style="color:#FFFFFF;font-size:25px;">修改推荐产品</a></li>
 		    	</ul>
 		    </div>
-  		</td></th>
-  	</table>
+  		</td></tr>
+  		<tr style="visibility: hidden;"><td colspan="3">111111111111111111111111111111111111111111111111111111111111</td></tr>
+  	</table> 
   	<div><b>请在下表中对行情数据进行修改</b></div>
     <table class="table table-hover text-center" id="recommendGoods">
       <tr>
