login add md5 ，alter session

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -13,6 +13,7 @@
 <script type="text/javascript" src="js/JquerySession.js"></script>
 <script type="text/javascript" src="js/json.js"></script>
 <script type="text/javascript" src="js/update.js"></script>
+<script type="text/javascript" src="js/md5.js"></script>
 <script>
 	$(document).ready(function(c) {
 		var as='pop-in';// 默认窗口动画
@@ -72,7 +73,7 @@
 		var password=document.getElementById("password").value;
 		var user={
 				"user_name":user_name,
-				"password":password
+				"password":md5(password)
 			}
 		$.ajax({
 	             url: "/fresh/user/login.action",        //后台url
